tests/transpiler/x/fs/membership.fs
// Mochi 0.10.31 - generated 2025-07-19 13:09:11 UTC
open System

let nums = [1; 2; 3]
printfn "%s" (string (nums.Contains(2)))
printfn "%s" (string (nums.Contains(4)))
